[tool.poetry]
name = "metamask-bf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
